<!--Copyright (c) 2015 Tejaswini Angal
 This program is released under the "GNU General Public License(GPL)".
   Please see the file COPYING in this distribution for
   license terms. -->

<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_on_Waves</string>
    <string name="action_settings">Settings</string>
    <string name="Right">Right</string>
    <string name="Left">Left</string>
    <string name="Stop">Stop</string>
    <string name="Forward">Forward</string>
    <string name="Reverse">Reverse</string>
    <string name="R_left">Reverse</string>
    <string name="R_right">Reverse</string>
</resources>
